@@ -274,6 +274,7 @@ check_function_exists(readlink HAVE_READLINK)
 check_function_exists(waitpid HAVE_WAITPID)
 check_function_exists(wait4 HAVE_WAIT4)
 
+check_include_files(regex.h HAVE_REGEX_H)
 check_include_files(sys/stat.h HAVE_SYS_STAT_H)
 check_include_files(strings.h HAVE_STRINGS_H)
 check_include_files(stdlib.h HAVE_STDLIB_H)
