@@ -2,6 +2,7 @@ from ucommon 5.3.0 to 5.3.1
 - cleanup for ide use.
 - NamedList sort uses system collation.
 - some convenience string methods added.
+- search and replace, regular expression support.
 
 from ucommon 5.2.2 to 5.3.0
 - sort specific string collation functions added
